Servidor Base de Datos/[Compi2]Proyecto1_201213587/src/Analisis/XML/Usuario/usrGrammar.jj
options {
IGNORE_CASE = true;
STATIC = false;
OUTPUT_DIRECTORY="D:\\Titus\\Documents\\Proyectos\\Compiladores 2\\Proyecto 1\\FISQL\\Servidor Base de Datos\\[Compi2]Proyecto1_201213587\\src\\Analisis\\XML\\Usuario\\";

}

PARSER_BEGIN(usrGrammar)
package Analisis.XML.Usuario;
import java.util.ArrayList;
import Funciones.XML.*;


public class usrGrammar {
  public static void main(String args[]) throws ParseException {
    usrGrammar parser = new usrGrammar(System.in);
    parser.S();
  }
}
PARSER_END(usrGrammar)

TOKEN:
{
    <T_USR_IZQ: ("<"(" ")*"usr")(" ")*">"> {/*System.out.println(image);*/}
    |<T_USR_DER: ("<"(" ")*"/"(" ")*"usr")(" ")*">"> {/*System.out.println(image);*/}
    |<T_NOMBRE_IZQ: ("<"(" ")*"nombre")(" ")*">"> {/*System.out.println(image);*/}
    |<T_NOMBRE_DER: ("<"(" ")*"/"(" ")*"nombre")(" ")*">"> {/*System.out.println(image);*/}
    |<T_PASS_IZQ: ("<"(" ")*"pass")(" ")*">"> {/*System.out.println(image);*/}
    |<T_PASS_DER: ("<"(" ")*"/"(" ")*"pass")(" ")*">"> {/*System.out.println(image);*/}
    |<T_TIPO_IZQ: ("<"(" ")*"tipo")(" ")*">"> {/*System.out.println(image);*/}
    |<T_TIPO_DER: ("<"(" ")*"/"(" ")*"tipo")(" ")*">"> {/*System.out.println(image);*/}
    |<T_ESTADO_IZQ: ("<"(" ")*"estado")(" ")*">"> {/*System.out.println(image);*/}
    |<T_ESTADO_DER: ("<"(" ")*"/"(" ")*"estado")(" ")*">"> {/*System.out.println(image);*/}
    |<T_SESION_IZQ: ("<"(" ")*"sesion")(" ")*">"> {/*System.out.println(image);*/}
    |<T_SESION_DER: ("<"(" ")*"/"(" ")*"sesion")(" ")*">"> {/*System.out.println(image);*/}
    |<T_PERMISOS_IZQ: ("<"(" ")*"permisos")(" ")*">"> {/*System.out.println(image);*/}
    |<T_PERMISOS_DER: ("<"(" ")*"/"(" ")*"permisos")(" ")*">"> {/*System.out.println(image);*/}
    |<T_DB_IZQ: ("<"(" ")*"db")(" ")*">"> {/*System.out.println(image);*/}
    |<T_DB_DER: ("<"(" ")*"/"(" ")*"db")(" ")*">"> {/*System.out.println(image);*/}
    |<T_FUNC_IZQ: ("<"(" ")*"func")(" ")*">"> {/*System.out.println(image);*/}
    |<T_FUNC_DER: ("<"(" ")*"/"(" ")*"func")(" ")*">"> {/*System.out.println(image);*/}
    |<T_OBJ_IZQ: ("<"(" ")*"obj")(" ")*">"> {/*System.out.println(image);*/}
    |<T_OBJ_DER: ("<"(" ")*"/"(" ")*"obj")(" ")*">"> {/*System.out.println(image);*/}
    |<T_PROC_IZQ: ("<"(" ")*"proc")(" ")*">"> {/*System.out.println(image);*/}
    |<T_PROC_DER: ("<"(" ")*"/"(" ")*"proc")(" ")*">"> {/*System.out.println(image);*/}
    |<T_TABLA_IZQ: ("<"(" ")*"tabla")(" ")*">"> {/*System.out.println(image);*/}
    |<T_TABLA_DER: ("<"(" ")*"/"(" ")*"tabla")(" ")*">"> {/*System.out.println(image);*/}
}

TOKEN:
{      
    <T_UNO: "1"> {/*System.out.println(image);*/}
    |<T_CERO: "0"> {/*System.out.println(image);*/}
    |<ID: (["a"-"z","A"-"Z"])(["a"-"z","A"-"Z","0"-"9","_"])*> {/*System.out.println(image);*/}
    |<CADENA:"\"" (~["\""])*"\""> {/*System.out.println(image);*/}
}

SKIP: 
{
  " "
| "\n"
| "\r"
| "\t"
}

ArrayList<Usuario> S():
{ArrayList<Usuario> us = new ArrayList<Usuario>();}
{   {System.out.println("Comienza!!");}
    us=L_USR(){return us;}
    {System.out.println("Exito!!");}
}

ArrayList<Usuario> L_USR():
{ArrayList<Usuario> us = new ArrayList<Usuario>(); ArrayList<Usuario> us2 = new ArrayList<Usuario>();}
{
   us=USR() (us2=L_USR()
            {
                    for(int i=0; i < us2.size(); i++){
                        us.add(us2.get(i));
                    }
                }
            )? {return us;}
}


ArrayList<Usuario> USR():
{String n,p,s; int t,e; ArrayList<PermisosUsr> pu = new ArrayList<PermisosUsr>();}
{
    <T_USR_IZQ>
        n = NOMBRE()
        p = PASS()
        t = TIPO()
        e = ESTADO()
        s = SESION()
        pu = PERMISOS()
    <T_USR_DER>     {
                        ArrayList<Usuario> u = new ArrayList<Usuario>();
                        u.add(new Usuario(n, p, t, e, s, pu));
                        return u;
                    }
}

String NOMBRE():
{Token n;}
{
    <T_NOMBRE_IZQ> n=<ID> <T_NOMBRE_DER> {return n.image;}
}

String PASS():
{Token p;}
{
    <T_PASS_IZQ> p=<CADENA> <T_PASS_DER>{return p.image.substring(1, p.image.length() - 1).trim()   ;}
}

int TIPO():
{int t;}
{
    <T_TIPO_IZQ> (<T_CERO> {t=0;} | <T_UNO> {t=1;}) <T_TIPO_DER> {return t;}
}

int ESTADO():
{int e;}
{
    <T_ESTADO_IZQ> (<T_UNO>{e=1;}|<T_CERO>{e=0;}) <T_ESTADO_DER> {return e;}
}

String SESION():
{Token s;}
{
    <T_SESION_IZQ> s=<CADENA> <T_SESION_DER>{return s.image.substring(1, s.image.length() - 1).trim();}
}


ArrayList<PermisosUsr> PERMISOS():
{ArrayList<PermisosUsr> lu = new ArrayList<PermisosUsr>();}
{
    <T_PERMISOS_IZQ> 
        (lu=L_DB())?               
    <T_PERMISOS_DER> {return lu;}
}

ArrayList<PermisosUsr> L_DB():
{ArrayList<PermisosUsr> lu = new ArrayList<PermisosUsr>(); ArrayList<PermisosUsr> lu2 = new ArrayList<PermisosUsr>();}
{
    lu=DB() (lu2=L_DB()
            {
                for(int i=0; i < lu2.size(); i++){
                    lu.add(lu2.get(i));
                }
            }
            )?  {return lu;}
}

ArrayList<PermisosUsr> DB():
{Token n; ArrayList<String> lp = new ArrayList<String>();ArrayList<String> lf = new ArrayList<String>();ArrayList<String> lo = new ArrayList<String>();ArrayList<String> lt = new ArrayList<String>();}
{
    <T_DB_IZQ>
    <T_NOMBRE_IZQ> n=<ID> <T_NOMBRE_DER>
    (lt=L_TABLA())?
    (lp=L_OBJETO())?
    (lf=L_FUNC())?
    (lp = L_PROC())?
    <T_DB_DER>  {
                    ArrayList<PermisosUsr> lu = new ArrayList<PermisosUsr>();
                    lu.add(new PermisosUsr(n.image, lt, lo, lf, lp  ));
                    return lu;
                }
}

ArrayList<String> L_TABLA():
{ArrayList<String> lt, lt2;}
{
    lt=TABLA() (lt2=L_TABLA()
                {
                    for(int i=0; i < lt2.size(); i++){
                        lt.add(lt2.get(i));
                    }
                }
            )? {return lt;}
}

ArrayList<String> TABLA():
{ArrayList<String> lt; Token t;}
{
    <T_TABLA_IZQ> t=<ID> <T_TABLA_DER>  {   lt = new ArrayList<String>(); 
                                            lt.add(t.image);
                                            return lt;
                                        } 
}

ArrayList<String> L_OBJETO():
{ArrayList<String> lo, lo2;}
{
    lo=OBJETO() (lo2=L_OBJETO()
                    {
                        for(int i=0; i < lo2.size(); i++){
                            lo.add(lo2.get(i));
                        }
                    }
                )? {return lo;}
}

ArrayList<String> OBJETO():
{ArrayList<String> lo; Token o;}
{
    <T_OBJ_IZQ> o=<ID> <T_OBJ_DER>      {   lo = new ArrayList<String>(); 
                                            lo.add(o.image);
                                            return lo;
                                        }
}

ArrayList<String> L_FUNC():
{ArrayList<String> lf, lf2;}
{
    lf=FUNC() (lf2=L_FUNC()
                {
                    for(int i=0; i < lf2.size(); i++){
                        lf.add(lf2.get(i));
                    }
                }
            )? {return lf;}
}

ArrayList<String> FUNC():
{ArrayList<String> lf; Token f;}
{
    <T_FUNC_IZQ> f=<ID> <T_FUNC_DER>    {   lf = new ArrayList<String>(); 
                                            lf.add(f.image);
                                            return lf;
                                        }
}
ArrayList<String> L_PROC():
{ArrayList<String> lp, lp2;}
{
    lp=PROC() (lp2=L_PROC()
                {
                    for(int i=0; i < lp2.size(); i++){
                        lp.add(lp2.get(i));
                    }
                }
                )? {return lp;}
}

ArrayList<String> PROC():
{ArrayList<String> lp; Token p;}
{
    <T_PROC_IZQ> p=<ID> <T_PROC_DER>    {   lp = new ArrayList<String>(); 
                                            lp.add(p.image);
                                            return lp;
                                        }
}
